# rust-ndb

./: Cargo.toml  LICENSE  README.md  bacon.toml  build.rs  flake.nix  treefmt.nix
.github/: dependabot.yml  labeler.yml
.github/workflows/: flakehub-publish.yml  nix-flake.yml  update-flake-lock.yml
src/: lib.rs  main.rs  parser.rs
