[package]
name = "ndb"
description = "plan9 ndb parser in rust. Early stage of development."
version = "0.1.0"
edition = "2021"
readme = "README.md"
build = "build.rs"
license = "GPL-3.0-only"
keywords = ["plan9", "ndb"]
categories = ["database"]
repository = "https://github.com/9glenda/rust-ndb"

[workspace]

[dependencies]
clap = { version = "4.4.11", features = ["cargo", "derive"] }
color-eyre = "0.6.2"
nom = "7.1.3"
serde = { version = "1.0.193", optional = true, features = [
  "serde_derive",
  "derive",
] }
serde_json = { version = "1.0.108", optional = true }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
default = ["capture-spantrace", "serde", "extra-traits"]
serde = ["dep:serde", "dep:serde_json"]
capture-spantrace = []
extra-traits = []

[lib]
name = "ndb"
path = "src/lib.rs"

[[bin]]
name = "ndb-rs"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = false
lto = false

[profile.release]
lto = true
strip = true
opt-level = 3
